k8s/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo
  labels:
    app: odoo
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
        component: frontend
    spec:
      containers:
      - name: odoo
        image: odoo:16.0
        ports:
        - containerPort: 8069
          name: http
        - containerPort: 8072
          name: longpolling
        volumeMounts:
        - name: odoo-data
          mountPath: /var/lib/odoo
        - name: odoo-config
          mountPath: /etc/odoo/odoo.conf
          subPath: odoo.conf
      volumes:
      - name: odoo-data
        emptyDir: {}
      - name: odoo-config
        configMap:
          name: odoo-config
