k8s/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
  labels:
    app: odoo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8069
    protocol: TCP
  - name: longpolling
    port: 8072
    protocol: TCP
  selector:
    app: odoo
  type: ClusterIP
